Fix book hover styles on Safari

--- a/src/styles/_reading.scss
+++ b/src/styles/_reading.scss
@@ -49,7 +49,7 @@
     }
 
     .book-cover {
-      transform: scale(1.05) rotateY(5deg);
+      transform: scale(1.05);
     }
   }
 
@@ -71,7 +71,7 @@
     box-shadow: 0 3px 10px rgba($body-bg, 0.25),
       inset 0 0 0 1px rgba($body-bg, 0.05);
     opacity: 0;
-    transform: translateY(1rem) rotateY(-10deg);
+    transform: translateY(1rem);
     transition: all 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
     &-title {
